[package]
version = "0.1.0"
name = "connpipe"
description = "tcp connection forwarder / multiplexer"
edition = "2021"
authors = ["1e1001"]

[workspace]
members = [
	"bytestr"
]

[dependencies.bytestr]
path = "bytestr/"

[dependencies.mlua]
version = "0.8.3"
features = ["lua54", "vendored", "async", "macros"]

[dependencies.tokio]
version = "1.20"
features = ["fs", "io-util", "macros", "net", "parking_lot", "rt-multi-thread", "sync", "time"]

[dependencies.log]
version = "0.4.17"

[dependencies.env_logger]
version = "0.9.0"

[dependencies.thiserror]
version = "1.0"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.toml]
version = "0.5.9"

[dependencies.async-trait]
version = "0.1.53"

[dependencies.notify]
version = "5.0"
features = ["macos_fsevent"]

[dependencies.ctrlc]
version = "3.2"

[dependencies.paste]
version = "1.0"
